added likert schemas, more methods
