# api/helpers/models/survey.js
@@ -1,9 +1,9 @@
 const mongoose = require('mongoose');
-// const Mixed = mongoose.Schema.Types.Mixed;
 const surveyQuestion = require('./surveyQuestion').schema;
 
 module.exports = require('../models')('Survey', {
     name                        : { type: String, required: true },
+    dateAdded                   : { type: Date, default: Date.now },
     lastSaved                   : { type: Date, default: Date.now },
     project                     : { type: 'ObjectId', ref: 'Project', default: null, index: true },
     commentPeriod               : { type: 'ObjectId', ref: 'CommentPeriod', default: null, index: true },
